<resources>
    <string name="app_name">Project2_Registration</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="title_username">"Username: %s"</string>
    <string name="title_firstname">"First Name: %s"</string>
    <string name="title_lastname">"Last Name: %s"</string>
    <string name="title_email">"Email: %s"</string>
    <string name="title_phone">"Phone: %s"</string>
    <string name="title_password">"Password: %s"</string>
</resources>