<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_100"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_userinfo"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="serif"
        android:text="User Info"
        android:textSize="50sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edtxt_username_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/edtxt_password_main"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:maxLines="3"
        android:minHeight="48dp"
        android:text="@string/title_password"
        android:textColorHint="#757575"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxt_phone_main" />

    <TextView
        android:id="@+id/edtxt_username_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:inputType="none"
        android:maxLines="3"
        android:minHeight="48dp"
        android:text="@string/title_username"
        android:textColorHint="#757575"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edtxt_firstname_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_userinfo" />

    <TextView
        android:id="@+id/edtxt_phone_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="20dp"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:maxLines="3"
        android:minHeight="48dp"
        android:text="@string/title_phone"
        android:textColorHint="#757575"
        android:textSize="20sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edtxt_password_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxt_email_main" />

    <TextView
        android:id="@+id/edtxt_lastname_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:maxLines="3"
        android:minHeight="48dp"

        android:text="@string/title_lastname"
        android:textColorHint="#757575"

        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edtxt_email_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxt_firstname_main" />

    <TextView
        android:id="@+id/edtxt_firstname_main"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginBottom="20dp"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:maxLines="3"
        android:minHeight="48dp"
        android:text="@string/title_firstname"
        android:textColorHint="#757575"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edtxt_lastname_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxt_username_main" />

    <TextView
        android:id="@+id/edtxt_email_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"


        android:fontFamily="serif-monospace"
        android:maxLines="3"
        android:minHeight="48dp"
        android:text="@string/title_email"
        android:textColorHint="#757575"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edtxt_phone_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxt_lastname_main" />

</androidx.constraintlayout.widget.ConstraintLayout>